--- a/read_gesla_v3.ipynb
+++ b/read_gesla_v3.ipynb
@@ -7,7 +7,7 @@
     "# Example usage\n",
     "\n",
     "## Initialize a GeslaDataset object\n",
-    "Place the gesla.py file in your working directory (or elsewhere on your path), and import the GeslaDataset class. Selecting and loading data files requires paths to the metadata .csv file and the directory containing the data files. Initialize a GeslaDataset object with these paths as follows."
+    "Place the `gesla.py` file in your working directory (or elsewhere on your path), and import the `GeslaDataset` class. Selecting and loading data files requires paths to the metadata .csv file and the directory containing the data files. Initialize a `GeslaDataset` object with these paths as follows."
    ]
   },
   {
@@ -29,7 +29,7 @@
    "metadata": {},
    "source": [
     "## Load data from a single file\n",
-    "If you want to work with data from a single record, and you know the filename you want, use the function `file_to_pandas` as follows. The function returns a pandas.DataFrame with data and flags, and a pandas.Series containing metadata."
+    "If you want to work with data from a single record, and you know the filename you want, use the function `file_to_pandas` as follows. The function returns a `pandas.DataFrame` with data and flags, and a `pandas.Series` containing metadata."
    ]
   },
   {
@@ -175,7 +175,7 @@
    "metadata": {},
    "source": [
     "## Load data from a list of files\n",
-    "If you want to work with data from multiple files, and you know the filenames you want, use the function `files_to_xarray` as follows. The function returns a xarray.Dataset object containing data, flags, and metadata."
+    "If you want to work with data from multiple files, and you know the filenames you want, use the function `files_to_xarray` as follows. The function returns a `xarray.Dataset` object containing data, flags, and metadata."
    ]
   },
   {
@@ -215,7 +215,9 @@
    "metadata": {},
    "source": [
     "## Load data from the N closest records to a lat/lon location\n",
-    "Load data from records close to a particular location using the function `load_N_closest` as follows. Provide a lat/lon location and the number of desired records. The function returns a xarray.Dataset object containing data, flags, and metadata."
+    "Load data from records close to a particular location using the function `load_N_closest` as follows. Provide a lat/lon location and the number of desired records. The function returns a `xarray.Dataset` object containing data, flags, and metadata.  \n",
+    "\n",
+    "Note the `UserWarning` that occurs when duplicate timestamps are encountered. The function `file_to_pandas` removes duplicates."
    ]
   },
   {
@@ -254,7 +256,7 @@
    "metadata": {},
    "source": [
     "## Load data from the records in a lat/lon range\n",
-    "Load data from records in a rectangular lat/lon range using the function `load_lat_lon_range` as follows. Provide lat/lon extents of the range. The function returns a xarray.Dataset object containing data, flags, and metadata."
+    "Load data from records in a rectangular lat/lon range using the function `load_lat_lon_range` as follows. Provide lat/lon extents of the range. The function returns a `xarray.Dataset` object containing data, flags, and metadata."
    ]
   },
   {
