Update how meta added

--- a/read_gesla_v3.ipynb
+++ b/read_gesla_v3.ipynb
@@ -188,14 +188,38 @@
      "output_type": "stream",
      "text": [
       "<xarray.Dataset>\n",
-      "Dimensions:    (date_time: 289251, station: 4)\n",
+      "Dimensions:                  (date_time: 289251, station: 4)\n",
       "Coordinates:\n",
-      "  * date_time  (date_time) datetime64[ns] 1971-06-09T05:00:00 ... 2018-12-31T...\n",
-      "Dimensions without coordinates: station\n",
+      "  * station                  (station) int64 0 1 2 3\n",
+      "  * date_time                (date_time) datetime64[ns] 1971-06-09T05:00:00 ....\n",
       "Data variables:\n",
-      "    sea_level  (station, date_time) float64 2.29 1.79 1.29 0.79 ... nan nan nan\n",
-      "    qc_flag    (station, date_time) float64 1.0 1.0 1.0 1.0 ... nan nan nan nan\n",
-      "    use_flag   (station, date_time) float64 1.0 1.0 1.0 1.0 ... nan nan nan nan\n"
+      "    sea_level                (station, date_time) float64 2.29 1.79 ... nan nan\n",
+      "    qc_flag                  (station, date_time) float64 1.0 1.0 ... nan nan\n",
+      "    use_flag                 (station, date_time) float64 1.0 1.0 ... nan nan\n",
+      "    site_name                (station) object 'Acajutla' ... 'Abrams_River'\n",
+      "    site_code                (station) object '082C' 'HD26' '8761494' '380'\n",
+      "    country                  (station) object 'El_Salvador' 'Japan' ... 'Canada'\n",
+      "    contributor_abbreviated  (station) object 'UHSLC' 'JODC_JCG' 'NOAA' 'MEDS'\n",
+      "    contributor_full         (station) object 'University of Hawaii Sea Level...\n",
+      "    contributor_website      (station) object 'https://uhslc.soest.hawaii.edu...\n",
+      "    contributor_contact      (station) object 'philiprt@hawaii.edu' ... 'Jenn...\n",
+      "    orginator                (station) object ' University of Hawaii Sea Leve...\n",
+      "    originator_website       (station) object 'Unspecified' ... 'https://isdm...\n",
+      "    originator_contact       (station) object 'Unspecified' ... 'Jenny.Chiu@d...\n",
+      "    latitude                 (station) float64 13.57 41.44 29.57 43.83\n",
+      "    longitude                (station) float64 -89.84 140.2 -89.81 -65.95\n",
+      "    coordinate_system        (station) object 'Unspecified' ... 'Unspecified'\n",
+      "    start_date_time          (station) datetime64[ns] 2010-08-19T21:00:00 ......\n",
+      "    end_date_time            (station) datetime64[ns] 2018-12-31T23:00:00 ......\n",
+      "    number_of_years          (station) int64 9 25 4 1\n",
+      "    time_zone_hours          (station) int64 0 0 0 0\n",
+      "    datum_information        (station) object 'Unspecified' ... 'Chart Datum ...\n",
+      "    instrument               (station) object 'Unspecified' ... 'Unspecified'\n",
+      "    precision                (station) object 'Unspecified' ... 'Unspecified'\n",
+      "    null_value               (station) float64 -100.0 -100.0 -100.0 -100.0\n",
+      "    gauge_type               (station) object 'Coastal' 'Coastal' ... 'Coastal'\n",
+      "    overall_record_quality   (station) object 'No obvious issues' ... 'No obv...\n",
+      "    filename                 (station) object 'acajutla-082c-el_salvador-uhsl...\n"
      ]
     }
    ],
@@ -229,12 +253,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xarray.DataArray 'site_name' (station: 10)>\n",
-      "array(['Abrams_River', 'Tusket', 'Lower_Wedgeport', 'Wedgeport',\n",
-      "       'Yarmouth', 'Pinkney_Point', 'Abbotts_Harbour', 'Woods_Harbour',\n",
-      "       'Flat_Island', 'Clarks_Harbour'], dtype=object)\n",
-      "Coordinates:\n",
-      "  * station  (station) int64 0 1 2 3 4 5 6 7 8 9\n"
+      "['Yarmouth' 'Lower_Wedgeport' 'Pinkney_Point' 'Abbotts_Harbour'\n",
+      " 'Clarks_Harbour' 'Woods_Harbour' 'Tusket' 'Abrams_River' 'Flat_Island'\n",
+      " 'Wedgeport']\n"
      ]
     },
     {
@@ -248,7 +269,7 @@
    ],
    "source": [
     "data = g3.load_N_closest(lat=43.83, lon=-65.95, N=10, force_xarray=True)\n",
-    "print(data.site_name)"
+    "print(data.site_name.values)"
    ]
   },
   {
@@ -263,25 +284,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<xarray.DataArray 'site_name' (station: 30)>\n",
-      "array(['Honolulu_Hawaii', 'Hilo_Hawaii', 'Midway', 'Johnston', 'Kahului',\n",
-      "       'Nawiliwili', 'Mokuoloe', 'French_Frigate', 'Kawaihae',\n",
-      "       'French_Frigate', 'Barbers_Point_HI', 'Honolulu_Kewalo',\n",
-      "       'Port_Allen', 'Kaumalapau_HI', 'Honolulu_Hawaii',\n",
-      "       'Honolulu_Pier_45', 'Honolulu', 'Hilo', 'Nawiliwili',\n",
-      "       'Sand_Island', 'Kahului', 'Mokuoloe', 'Kawaihae', 'Johnston_Atoll',\n",
-      "       'Port_Allen', 'Kaumalapau_Harbor', 'Kaunakakai_Harbor',\n",
-      "       'Laiemaloo', 'Fort_Kamehameha', 'Ford_Island'], dtype=object)\n",
-      "Coordinates:\n",
-      "  * station  (station) int64 0 1 2 3 4 5 6 7 8 9 ... 21 22 23 24 25 26 27 28 29\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "south_lat = 15\n",
     "north_lat = 30\n",
@@ -291,8 +294,15 @@
     "data = g3.load_lat_lon_range(\n",
     "    south_lat=south_lat, north_lat=north_lat, west_lon=west_lon, east_lon=east_lon\n",
     ")\n",
-    "print(data.site_name)"
+    "print(data.site_name.values)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
