Rename example notebook

--- a/example_usage.ipynb
+++ b/example_usage.ipynb
@@ -241,7 +241,7 @@
     "## Load data from the N closest records to a lat/lon location\n",
     "Load data from records close to a particular location using the function `load_N_closest` as follows. Provide a lat/lon location and the number of desired records. The function returns a `xarray.Dataset` object containing data, flags, and metadata.  \n",
     "\n",
-    "Note the `UserWarning` that occurs when duplicate timestamps are encountered. The function `file_to_pandas` removes duplicates."
+    "Note the `UserWarning` that occurs when duplicate timestamps are encountered. The function `file_to_pandas` used to read each individual file keeps only the first of any duplicate timestamps."
    ]
   },
   {
@@ -268,7 +268,7 @@
     }
    ],
    "source": [
-    "data = g3.load_N_closest(lat=43.83, lon=-65.95, N=10, force_xarray=True)\n",
+    "data = g3.load_N_closest(lat=43.83, lon=-65.95, N=10)\n",
     "print(data.site_name.values)"
    ]
   },
@@ -310,13 +310,6 @@
     ")\n",
     "print(data.site_name.values)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
