--- a/example_usage.ipynb
+++ b/example_usage.ipynb
@@ -306,7 +306,10 @@
     "east_lon = -140\n",
     "\n",
     "data = g3.load_lat_lon_range(\n",
-    "    south_lat=south_lat, north_lat=north_lat, west_lon=west_lon, east_lon=east_lon\n",
+    "    south_lat=south_lat,\n",
+    "    north_lat=north_lat,\n",
+    "    west_lon=west_lon,\n",
+    "    east_lon=east_lon,\n",
     ")\n",
     "print(data.site_name.values)"
    ]
