Use new filename field in meta

--- a/example_usage.ipynb
+++ b/example_usage.ipynb
@@ -19,7 +19,7 @@
     "from gesla import GeslaDataset\n",
     "\n",
     "meta_file = \"../GESLAv3/GESLA3_ALL.csv\"\n",
-    "data_path = \"../GESLAv3/data/\"\n",
+    "data_path = \"../GESLAv3/GESLA3/\"\n",
     "\n",
     "g3 = GeslaDataset(meta_file=meta_file, data_path=data_path)"
    ]
@@ -71,32 +71,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1971-06-09 05:00:00</th>\n",
-       "      <td>2.29</td>\n",
+       "      <th>2010-08-19 21:00:00</th>\n",
+       "      <td>1.064</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1971-06-09 06:00:00</th>\n",
-       "      <td>1.79</td>\n",
+       "      <th>2010-08-19 22:00:00</th>\n",
+       "      <td>0.905</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1971-06-09 07:00:00</th>\n",
-       "      <td>1.29</td>\n",
+       "      <th>2010-08-19 23:00:00</th>\n",
+       "      <td>0.871</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1971-06-09 08:00:00</th>\n",
-       "      <td>0.79</td>\n",
+       "      <th>2010-08-20 00:00:00</th>\n",
+       "      <td>0.998</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1971-06-09 09:00:00</th>\n",
-       "      <td>0.63</td>\n",
+       "      <th>2010-08-20 01:00:00</th>\n",
+       "      <td>1.198</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -107,56 +107,56 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1971-10-26 00:00:00</th>\n",
-       "      <td>0.86</td>\n",
+       "      <th>2018-12-31 19:00:00</th>\n",
+       "      <td>1.563</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1971-10-26 01:00:00</th>\n",
-       "      <td>0.65</td>\n",
+       "      <th>2018-12-31 20:00:00</th>\n",
+       "      <td>1.246</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1971-10-26 02:00:00</th>\n",
-       "      <td>0.99</td>\n",
+       "      <th>2018-12-31 21:00:00</th>\n",
+       "      <td>1.001</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1971-10-26 03:00:00</th>\n",
-       "      <td>1.42</td>\n",
+       "      <th>2018-12-31 22:00:00</th>\n",
+       "      <td>0.928</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1971-10-26 04:00:00</th>\n",
-       "      <td>1.84</td>\n",
+       "      <th>2018-12-31 23:00:00</th>\n",
+       "      <td>1.007</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3336 rows × 3 columns</p>\n",
+       "<p>73347 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                     sea_level  qc_flag  use_flag\n",
        "date_time                                        \n",
-       "1971-06-09 05:00:00       2.29        1         1\n",
-       "1971-06-09 06:00:00       1.79        1         1\n",
-       "1971-06-09 07:00:00       1.29        1         1\n",
-       "1971-06-09 08:00:00       0.79        1         1\n",
-       "1971-06-09 09:00:00       0.63        1         1\n",
+       "2010-08-19 21:00:00      1.064        1         1\n",
+       "2010-08-19 22:00:00      0.905        1         1\n",
+       "2010-08-19 23:00:00      0.871        1         1\n",
+       "2010-08-20 00:00:00      0.998        1         1\n",
+       "2010-08-20 01:00:00      1.198        1         1\n",
        "...                        ...      ...       ...\n",
-       "1971-10-26 00:00:00       0.86        1         1\n",
-       "1971-10-26 01:00:00       0.65        1         1\n",
-       "1971-10-26 02:00:00       0.99        1         1\n",
-       "1971-10-26 03:00:00       1.42        1         1\n",
-       "1971-10-26 04:00:00       1.84        1         1\n",
+       "2018-12-31 19:00:00      1.563        1         1\n",
+       "2018-12-31 20:00:00      1.246        1         1\n",
+       "2018-12-31 21:00:00      1.001        1         1\n",
+       "2018-12-31 22:00:00      0.928        1         1\n",
+       "2018-12-31 23:00:00      1.007        1         1\n",
        "\n",
-       "[3336 rows x 3 columns]"
+       "[73347 rows x 3 columns]"
       ]
      },
      "execution_count": 2,
@@ -165,7 +165,7 @@
     }
    ],
    "source": [
-    "filename = \"abrams_river-380-canada-meds\"\n",
+    "filename = \"acajutla-082c-slv-uhslc\"\n",
     "data, meta = g3.file_to_pandas(filename)\n",
     "data"
    ]
@@ -188,47 +188,33 @@
      "output_type": "stream",
      "text": [
       "<xarray.Dataset>\n",
-      "Dimensions:                  (date_time: 289251, station: 4)\n",
+      "Dimensions:                  (station: 4, date_time: 289251)\n",
       "Coordinates:\n",
       "  * station                  (station) int64 0 1 2 3\n",
       "  * date_time                (date_time) datetime64[ns] 1971-06-09T05:00:00 ....\n",
-      "Data variables:\n",
+      "Data variables: (12/27)\n",
       "    sea_level                (station, date_time) float64 2.29 1.79 ... nan nan\n",
       "    qc_flag                  (station, date_time) float64 1.0 1.0 ... nan nan\n",
       "    use_flag                 (station, date_time) float64 1.0 1.0 ... nan nan\n",
+      "    filename                 (station) object 'acajutla-082c-slv-uhslc' ... '...\n",
       "    site_name                (station) object 'Acajutla' ... 'Abrams_River'\n",
       "    site_code                (station) object '082C' 'HD26' '8761494' '380'\n",
-      "    country                  (station) object 'El_Salvador' 'Japan' ... 'Canada'\n",
-      "    contributor_abbreviated  (station) object 'UHSLC' 'JODC_JCG' 'NOAA' 'MEDS'\n",
-      "    contributor_full         (station) object 'University of Hawaii Sea Level...\n",
-      "    contributor_website      (station) object 'https://uhslc.soest.hawaii.edu...\n",
-      "    contributor_contact      (station) object 'philiprt@hawaii.edu' ... 'Jenn...\n",
-      "    orginator                (station) object ' University of Hawaii Sea Leve...\n",
-      "    originator_website       (station) object 'Unspecified' ... 'https://isdm...\n",
-      "    originator_contact       (station) object 'Unspecified' ... 'Jenny.Chiu@d...\n",
-      "    latitude                 (station) float64 13.57 41.44 29.57 43.83\n",
-      "    longitude                (station) float64 -89.84 140.2 -89.81 -65.95\n",
-      "    coordinate_system        (station) object 'Unspecified' ... 'Unspecified'\n",
-      "    start_date_time          (station) datetime64[ns] 2010-08-19T21:00:00 ......\n",
-      "    end_date_time            (station) datetime64[ns] 2018-12-31T23:00:00 ......\n",
-      "    number_of_years          (station) int64 9 25 4 1\n",
-      "    time_zone_hours          (station) int64 0 0 0 0\n",
+      "    ...                       ...\n",
       "    datum_information        (station) object 'Unspecified' ... 'Chart Datum ...\n",
       "    instrument               (station) object 'Unspecified' ... 'Unspecified'\n",
       "    precision                (station) object 'Unspecified' ... 'Unspecified'\n",
       "    null_value               (station) float64 -100.0 -100.0 -100.0 -100.0\n",
       "    gauge_type               (station) object 'Coastal' 'Coastal' ... 'Coastal'\n",
-      "    overall_record_quality   (station) object 'No obvious issues' ... 'No obv...\n",
-      "    filename                 (station) object 'acajutla-082c-el_salvador-uhsl...\n"
+      "    overall_record_quality   (station) object 'No obvious issues' ... 'No obv...\n"
      ]
     }
    ],
    "source": [
     "filenames = [\n",
-    "    \"abrams_river-380-canada-meds\",\n",
-    "    \"acajutla-082c-el_salvador-uhslc\", \n",
-    "    \"yoshioka-hd26-japan-jodc_jcg\", \n",
-    "    \"west_point_a_la_hache-8761494-united_states_of_america_the-noaa\",\n",
+    "    \"abrams_river-380-can-meds\",\n",
+    "    \"acajutla-082c-slv-uhslc\", \n",
+    "    \"yoshioka-hd26-jpn-jodc_jcg\", \n",
+    "    \"west_point_a_la_hache-8761494-usa-noaa\",\n",
     "]\n",
     "xr_dataset = g3.files_to_xarray(filenames)\n",
     "print(xr_dataset)"
@@ -262,7 +248,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/phil/Dropbox (Personal)/Research/Data/TideGaugeSets/GESLAv3/GeslaDataset/gesla.py:76: UserWarning: Duplicate timestamps in file yarmouth-365-canada-meds were removed.\n",
+      "/Users/phil/Dropbox (Personal)/Research/Data/TideGaugeSets/GESLAv3/GeslaDataset/gesla.py:64: UserWarning: Duplicate timestamps in file yarmouth-365-can-meds were removed.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -313,6 +299,13 @@
     ")\n",
     "print(data.site_name.values)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -320,7 +313,7 @@
    "hash": "4b2458d0610a23fbd5c707a25149dc9218000ef165f906d82c15727d18cbe22b"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -333,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
